# huginn

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  setup.py
src/huginn/: __init__.py  __main__.py  cli.py  dataTypes.py
src/huginn/aiAssistant/: __init__.py  assistant.py  systemDiagnostics.py
